# gvb_server/docs/swagger.yaml
@@ -59,7 +59,10 @@ definitions:
         items:
           type: string
         type: array
-      tags:
+      created_at:
+        description: 标签的创建时间
+        type: string
+      tag:
         type: string
     type: object
   article_api.CalendarResponse:
@@ -793,6 +796,11 @@ paths:
       - description: 排序
         in: query
         name: sort
+        type: string
+      - description: token
+        in: header
+        name: token
+        required: true
         type: string
       produces:
       - application/json
