# gvb_server/models/article_model.go
@@ -11,32 +11,32 @@ import (
 
 // 文章表
 type ArticleModel struct {
-	ID        string `json:"id"`         // es的ID
-	CreatedAt string `json:"created_at"` // 创建时间
-	UpdatedAt string `json:"updated_at"` // 更新时间
+	ID        string `json:"id"  structs:"id"`         // es的ID
+	CreatedAt string `json:"created_at" structs:"created_at"` // 创建时间
+	UpdatedAt string `json:"updated_at" structs:"updated_at"` // 更新时间
 
-	Title    string `json:"title"`              // 文章标题
-	Keyword  string `json:"keyword,omit(list)"` //关键字    存储时与文章标题相同，便于搜索         omit排除，filter.Omit("list", list)
-	Abstract string `json:"abstract"`           // 文章简介  如果不存在文章简介，截取文章内容的100字为简介
-	Content  string `json:"content,omit(list)"` // 文章内容
+	Title    string `json:"title" structs:"title"`              // 文章标题
+	Keyword  string `json:"keyword,omit(list)" structs:"keyword"` //关键字    存储时与文章标题相同，便于搜索         omit排除，filter.Omit("list", list)
+	Abstract string `json:"abstract" structs:"abstract"`           // 文章简介  如果不存在文章简介，截取文章内容的100字为简介
+	Content  string `json:"content,omit(list)" structs:"content"` // 文章内容
 
-	LookCount     int `json:"look_count"`     // 文章浏览量
-	CommentCount  int `json:"comment_count"`  // 文章评论量
-	DiggCount     int `json:"digg_count"`     // 文章点赞量
-	CollectsCount int `json:"collects_count"` // 文章收藏量
+	LookCount     int `json:"look_count" structs:"look_count"`     // 文章浏览量
+	CommentCount  int `json:"comment_count" structs:"comment_count"`  // 文章评论量
+	DiggCount     int `json:"digg_count" structs:"digg_count"`     // 文章点赞量
+	CollectsCount int `json:"collects_count" structs:"collects_count"` // 文章收藏量
 
-	UserID       uint   `json:"user_id"`        // 用户id
-	UserNickName string `json:"user_nick_name"` // 用户昵称
-	UserAvatar   string `json:"user_avatar"`    // 用户头像
+	UserID       uint   `json:"user_id" structs:"user_id"`        // 用户id
+	UserNickName string `json:"user_nick_name" structs:"user_nick_name"` // 用户昵称
+	UserAvatar   string `json:"user_avatar" structs:"user_avatar"`    // 用户头像
 
-	Category string `json:"category"`          // 文章分类
-	Source   string `json:"source,omit(list)"` // 文章来源
-	Link     string `json:"link,omit(list)"`   // 原文链接
+	Category string `json:"category" structs:"category"`          // 文章分类
+	Source   string `json:"source,omit(list)" structs:"source"` // 文章来源
+	Link     string `json:"link,omit(list)" structs:"link"`   // 原文链接
 
-	BannerID  uint   `json:"banner_id"`  // 文章封面id
-	BannerUrl string `json:"banner_url"` // 文章封面
+	BannerID  uint   `json:"banner_id" structs:"banner_id"`  // 文章封面id
+	BannerUrl string `json:"banner_url" structs:"banner_url"` // 文章封面
 
-	Tags ctype.Array `json:"tags"` // 文章标签
+	Tags ctype.Array `json:"tags" structs:"tags"` // 文章标签
 }
 
 func (ArticleModel) Index() string {
